# NovelSoup

./: .gitignore  README.md  REFACTORING_PLAN.md
backend/: .env.example  main.py  pyproject.toml  test_novel_ws.py
backend/data/skills/: novel_agent_decision.md  novel_agent_supervision.md  novel_execution_continue.md  novel_execution_enhance.md  novel_execution_rewrite.md
backend/data/skills/genre_skills/: mystery.md  romance.md  sci_fi.md  urban.md  xianxia.md
backend/data/skills/style_skills/: hemingway.md  online_fiction.md
backend/data/skills/technique_skills/: description_mastery.md  dialogue_writing.md  emotional_scene.md  fight_scene.md
backend/src/: main.py
backend/src/agents/: __init__.py  graph.py  state.py
backend/src/agents/nodes/: __init__.py  continue_.py  decision.py  enhance.py  rewrite.py  supervision.py  supervisor.py
backend/src/api/: __init__.py  ai_config.py  chapters.py  character_extract.py  characters.py  memories.py  projects.py  prompts.py  skills.py
backend/src/models/: __init__.py
backend/src/schemas/: __init__.py  chapter.py  character.py  memory.py  project.py  ws_message.py
backend/src/tools/: __init__.py
backend/src/utils/: __init__.py  chat_model.py  database.py  settings.py  skills_loader.py  vector_store.py
backend/src/ws/: __init__.py  connection.py  novel_agent.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: aiConfig.ts  chapters.ts  characters.ts  client.ts  index.ts  (+2 more)
(+26 files in other folders)
